--- a/style.css
+++ b/style.css
@@ -917,7 +917,7 @@ select.form-control {
 /* Sponsors */
 .sponsors-grid {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: var(--space-32);
   align-items: center;
   margin-top: var(--space-32);
